--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "mongoose": "^8.9.3"
+    "mongoose": "^8.9.3",
+    "validator": "^13.12.0"
   }
 }
